<resources>
    <!-- App Strings -->
    <string name="app_name">Workout Companion</string>
    <string name="app_description">The fastest, easiest way to find a local gym and workout partner</string>

    <!-- Keys -->
    <string name="api_map_key">AIzaSyBRvdvERi0N5L2LPekYFbJ7w6jpBoucJ2o</string>
    <string name="api_places_key">AIzaSyAVJmg5MTebQxSa5T6EQ1uJjz0hsPm0S60</string>
    <string name="gcm_sender_id">1058468277142</string>
    <string name="airship_dev_app_key">U106HFiGTuOxuVN3iTsJUA</string>
    <string name="airship_dev_app_secret">7Nqij48pSyaJfV78rwiAdQ</string>
    <string name="airship_prod_app_key">KFG7W4pjRhaxbB-BVWxslA</string> <!-- // TODO: update with prod key -->
    <string name="airship_prod_app_secret">076-KC0lQYOvp5FPHwwsnQ</string> <!-- // TODO: update with prod app secret -->

    <!-- Notification Strings -->
    <string name="notification_companion">You have a nearby companion</string>

    <!-- Login Strings -->
    <string name="login">Login</string>
    <string name="login_back">Back to Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_reset">Password Reset</string>
    <string name="forgot_password_prompt">Please enter your WorkoutCompanion account email address</string>
    <string name="forgot_password_sent_link">Send Reset Link</string>
    <string name="forgot_password_sent">Forgotten password instructions sent</string>
    <string name="create_account">Create Account</string>

    <!-- Profile Strings -->
    <string name="user_profile">User Profile</string>
    <string name="set_public">Set Public</string>
    <string name="set_private">Set Private</string>
    <string name="is_public">Public</string>
    <string name="is_private">Private</string>
    <string name="workout_request_sent">Workout request sent</string>

    <!-- Navigation Strings -->
    <string name="nav_account_section">Account</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_companion_filters">@string/action_companion_filters</string>
    <string name="nav_settings">Settings</string>

    <!-- Filter Strings -->
    <string name="filters_saved">Filter changes have been saved</string>

    <!-- Gym Details Strings -->
    <string name="gym_details">Gym Details</string>
    <string name="gym_photos">Gym Photos</string>
    <string name="gym_added">Gym has been added to your list of active gyms</string>
    <string name="gym_removed">Gym has been removed from your list of active gyms</string>
    <string name="gym_favorited">Gym has been added to favorites</string>
    <string name="gym_unfavorited">Gym has been unfavorited</string>
    <string name="gym_name">Name</string>
    <string name="gym_address">Address</string>
    <string name="gym_map">Map</string>
    <string name="gym_website">Website</string>
    <string name="gym_hours">Hours of Operation</string>
    <string name="gym_rating">Rating</string>
    <string name="gym_rating_unavailable">Rating Unavailable</string>
    <string name="gym_reviews">Reviews</string>
    <string name="gym_call_permission_reason">We will need your permission to make phone calls</string>
    <string name="gym_share">Share Gym Using</string>
    <string name="gym_share_text"><p>I found this gym, %1$s, on WorkoutCompanion! Maybe we could check it out! \n %2$s</p></string>
    <string name="gym_set_as_current">Set as home gym</string>

    <!-- Settings Strings -->
    <string name="notification_quiet_time">Quiet Time:</string>
    <string name="notification_quiet_time_to"> to </string>
    <string name="version">Version: %s</string>

    <!-- Discover Nav Strings -->
    <string name="discover_gyms">Find Gyms</string>
    <string name="discover_saved_gyms">Saved Gyms</string>
    <string name="discover_my_companions">My Companions</string>

    <!-- Menu Strings -->
    <string name="action_add">Add</string>
    <string name="action_call">Call</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_continue">Continue</string>
    <string name="action_dev_settings">Dev Settings</string>
    <string name="action_discover">Discover</string>
    <string name="action_done">Done</string>
    <string name="action_edit">Edit</string>
    <string name="action_companion_filters">Companion Filters</string>
    <string name="action_logout">Logout</string>
    <string name="action_message">Message</string>
    <string name="action_remove">Remove</string>
    <string name="action_request_workout">Request Workout</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_show_list">Show List</string>
    <string name="action_hide_list">Hide List</string>

    <!-- Prompt Strings -->
    <string name="email">Email</string>
    <string name="email_blank">xxxx@xxxxx.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_blank">(xxx) xxx-xxx</string>
    <string name="search_hint">City, State or Zip</string>
    <string name="filter_search_hint">Filter by City, State or Zip</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="exercises">Exercises</string>
    <string name="exercise">Exercise</string>
    <string name="age_value">%d y.o.</string>
    <string name="weight_value">%d lbs</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthday">MM/DD/YYYY</string>
    <string name="birthday_blank">xx/xx/xxxx</string>
    <string name="request_workout_to_see">To see %s\'s contact info, send them a workout request</string>
    <string name="request_exercise">Request Exercise</string>
    <string name="request">Request</string>
    <string name="home_gym_select">Select Home Gym</string>
    <string name="gym_select">Select a Gym</string>
    <string name="home_gym_not_selected">Home Gym Not Supplied</string>
    <string name="filter_by_select">Filter by Gym</string>
    <string name="companions">Companions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="call_prompt">Call %1$s at %2$s?</string>

    <!-- Empty List Strings -->
    <string name="empty_companions_header_image">http://cdn3-www.superherohype.com/assets/uploads/gallery/captain_america_4979/captain_america_the_winter_soldier_7927/captws_captainamerica_avatar.jpg</string>
    <string name="empty_companions_header_first_name">Garrett</string>
    <string name="empty_companions_header_last_name">Franks</string>
    <string name="empty_companions_header_exercises">Biking, Crossfit, Hiking, Jogging, P90X, Running, Soccer, Swimming, Tennis, Walking, Weight Lifting</string>
    <string name="empty_workout_companions_title">See companions here</string>
    <string name="empty_workout_companions_subtitle">Request workouts from their profile</string>
    <string name="empty_reviews_title">See gym reviews</string>
    <string name="empty_reviews_subtitle">This gym does not have any reviews</string>
    <string name="empty_favorite_gyms_header_image">http://abenity.s3.amazonaws.com/external/images/logo_lafitness_250.jpg</string>
    <string name="empty_favorite_gyms_header_name">LA Fitness</string>
    <string name="empty_favorite_gyms_header_vicinity">75 5th St NW, Atlanta, GA 30308</string>
    <string name="empty_favorite_gyms_title">Save the gyms you love</string>
    <string name="empty_favorite_gyms_subtitle">Tap the heart icon to save a gym</string>
    <string name="empty_select_home_gym">Search by location to select your home gym</string>
    <string name="empty_gym">No gyms to display</string>
    <string name="empty_users">No companions found at this gym</string>

    <!-- Error Strings -->
    <string name="error_network">Network error, please try again</string>
    <string name="error_network_no_response">Error, no response</string>
    <string name="error_network_http">Unable to process request</string>
    <string name="error_login">Please enter an email address and/or password to continue</string>
    <string name="error_create_account">Please ensure you have entered a valid email and filled in all fields</string>
    <string name="error_not_an_email">Please enter a valid email</string>
    <string name="error_no_password_create">Password not entered or does not match</string>
    <string name="error_no_password">Please enter a password</string>
    <string name="error_no_phone_number">Please enter a valid phone number</string>
    <string name="error_invalid_birthday">Birthday must be in the format of MM/DD/YYYY</string>
    <string name="error_no_first_name">Please enter a first name</string>
    <string name="error_no_last_name">Please enter a last name</string>
    <string name="error_no_home_gym_selected">Please select a home gym</string>
    <string name="error_user_profile">Please ensure you have entered all the correct info</string>
    <string name="error_no_location">Unable to acquire location. Please use built in search.</string>
    <string name="error_unable_to_load_exercises">Unable to load exercises, loading default ones</string>
    <string name="error_unable_to_load_saved_gyms">Unable to load saved gyms</string>
    <string name="error_unable_to_show_list">Unable to show list of gyms at this time</string>

    <!-- Dev Settings Strings -->
    <string name="dev_settings">Development Settings</string>
    <string name="dev_features">Features</string>
    <string name="dev_feature_crashlytics">Crashlytics</string>
    <string name="dev_network_information">Network</string>
    <string name="dev_logging">Logging</string>
    <string name="dev_environment">Environment</string>
    <string name="dev_images">Images</string>
    <string name="dev_image_indicators">Indicators</string>
    <string name="dev_build_information">Build Information</string>
    <string name="dev_name">Name</string>
    <string name="dev_code">Code</string>
    <string name="dev_sha">SHA</string>
    <string name="dev_date">Date</string>
    <string name="dev_information">Information</string>
    <string name="dev_make">Make</string>
    <string name="dev_model">Model</string>
    <string name="dev_resolution">Resolution</string>
    <string name="dev_density">Density</string>
    <string name="dev_release">Release</string>
    <string name="dev_api">API</string>

    <!-- Transition Name strings -->
    <string name="transition_log_in_title">log_in_title</string>
    <string name="transition_log_in_subtitle">log_in_subtitle</string>
    <string name="transition_header">header</string>
    <string name="transition_user_image">user_image</string>
    <string name="transition_user_name">user_name</string>
    <string name="transition_user_email">user_email</string>
    <string name="transition_gym_image">gym_image</string>
    <string name="transition_gym_name">gym_name</string>
    <string name="transition_gym_address">gym_address</string>
    <string name="transition_gym_favorite">gym_favorite</string>
</resources>
