<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_discover"
            android:checked="true"
            android:icon="@drawable/ic_discover"
            android:title="@string/action_discover" />

        <item
            android:id="@+id/nav_companion_filters"
            android:checked="true"
            android:icon="@drawable/ic_filter"
            android:title="@string/action_companion_filters" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/nav_account_section">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/action_logout" />
        </menu>
    </item>

</menu>
